--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "track-server-renderer",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Server-side renderer for track.",
   "main": "lib/index.js",
   "repository": "yosami-framework/track-server-renderer.git",
@@ -21,16 +21,15 @@
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "mithril": "^1.1.6",
-    "track-component": "0.0.7",
-    "track-config": "0.0.5",
-    "track-controller": "0.0.10",
-    "track-dsl": "0.0.3",
+    "track-component": "0.0.18",
+    "track-config": "0.0.6",
+    "track-controller": "0.0.21",
+    "track-dsl": "0.0.8",
     "track-eventor": "0.0.5",
-    "track-helpers": "0.0.1",
-    "track-i18n": "0.0.2",
-    "track-model": "0.0.5",
-    "track-spec": "0.0.3",
-    "track-view": "0.0.4"
+    "track-helpers": "0.0.5",
+    "track-i18n": "0.0.4",
+    "track-model": "0.0.7",
+    "track-spec": "0.0.4"
   },
   "peerDependencies": {
     "mithril": "1.x",
